[package]
name = "smpp"
version = "0.1.2"
authors = ["Andy Balaam", "The Rust SMPP Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/andybalaam/rust-smpp"
homepage = "https://gitlab.com/andybalaam/rust-smpp"
description = """
SMPP protocol support (client and server).
"""
keywords = ["smpp", "sms", "smsc", "esme"]
categories = ["network-programming", "parser-implementations"]
edition = "2018"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md"]

[dependencies]
ascii = "1.0"
async-trait = ">=0.1.42"
bytes = "1"
clap = "3.0.0-beta.2"
env_logger = "0.8.*"
futures = { version = "0.3.*" }
log = "0.4.*"
num-traits = "0.2"
smpp-pdu = "0.1"
tokio = { version = ">=1.0.1", features = ["full"] }

[dev-dependencies]
once_cell = "1.5.*"
